--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,16 @@
   position: relative;
   color: var(--ui-heading-color);
   letter-spacing: 2px;
+  z-index: 1;
+}
+
+.title span {
+  position: relative;
+  z-index: 1;
 
   &::after {
     content: "";
-    width: 132px;
+    width: 100%;
     height: 31px;
     background: var(--ui-brand-color);
     position: absolute;
@@ -19,29 +25,40 @@
   }
 }
 
-.item__icon {
-  right: inherit;
-  left: 0;
-  top: 20px;
-}
+.item {
+  margin-top: 40px;
 
-.item__title,
-.item__content {
-  padding: 5px 15px 15px 50px;
-}
+  &__icon {
+    right: inherit;
+    left: 0;
+    top: 20px;
+  }
 
-.item__title {
-  letter-spacing: 1.6px;
-}
+  &__title,
+  &__content {
+    padding: 5px 15px 15px 50px;
+  }
 
-.item__content {
-  line-height: var(--ui-subtitle-line-height);
-  letter-spacing: 1.1px;
+  &__title {
+    letter-spacing: 1.6px;
+  }
+
+  &__content {
+    line-height: var(--ui-subtitle-line-height);
+    letter-spacing: 1.1px;
+  }
 }
 
 @media (min-width: 992px) {
-  .item__title,
-  .item__content {
-    padding: 10px 20px 15px 55px;
+  .item {
+    &__icon {
+      left: 49px;
+      top: 22px;
+    }
+
+    &__title,
+    &__content {
+      padding: 10px 20px 15px 100px;
+    }
   }
 }
