--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,102 @@
 @import "wireframe-zapdos-events/src/style.css";
 
 /* start here */
+.section {
+  padding: 90px 0 120px;
+}
+
+.title {
+  color: var(--ui-heading-color);
+  letter-spacing: 2px;
+
+  span {
+    position: relative;
+    z-index: 10;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      z-index: -1;
+      top: 40px;
+      height: 32px;
+      width: 216px;
+      background: var(--ui-brand-color);
+    }
+  }
+}
+
+.article {
+  background: var(--ui-light-shade-color);
+
+  &__badge {
+    max-width: 162px;
+    background-color: var(--ui-brand-color);
+    font-size: var(--ui-text-size);
+    font-weight: var(--ui-text-font-weight);
+    text-transform: uppercase;
+    padding: 11px 15px;
+    letter-spacing: 2px;
+    left: 0;
+
+    &::after {
+      content: none;
+    }
+  }
+
+  &__info {
+    padding: 11px 11px 7px 30px;
+  }
+
+  &__top {
+    margin-bottom: 20px;
+  }
+
+  &__title {
+    font-size: var(--ui-heading-large-size);
+    line-height: var(--ui-heading-large-line-height);
+    letter-spacing: 1.6px;
+    margin-top: 0;
+  }
+
+  &__date {
+    color: var(--ui-caption-color);
+    line-height: var(--ui-small-text-line-height);
+    margin-bottom: 5px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+
+  &__time {
+    font-size: var(--ui-text-size);
+    line-height: var(-ui-subtitle-line-height);
+    letter-spacing: .9px;
+  }
+
+  &__location {
+    color: var(--ui-subtitle-color);
+    font-size: var(--ui-subtitle-size);
+    line-height: var(--ui-subtitle-line-height);
+    font-weight: var(--ui-subtitle-font-weight);
+    letter-spacing: 1.1px;
+    margin-bottom: 16px;
+  }
+
+  &__cta {
+    font-weight: var(--ui-small-text-font-weight);
+    color: var(--ui-caption-color);
+    letter-spacing: 1.4px;
+    text-transform: uppercase;
+  }
+
+  &__picture {
+
+    @media (min-width: 768px) {
+      min-height: 310px;
+    }
+  }
+
+  &__bottom {
+    flex-direction: column;
+  }
+}
