--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,125 @@
 @import "wireframe-zapdos-process/src/style.css";
 
-/* start here */
+.section {
+  padding-top: 80px;
+}
+
+.subtitle {
+  font-size: var(--ui-subtitle-size);
+  line-height: var(--ui-subtitle-line-height);
+  font-family: var(--ui-subtitle-font-family);
+  font-weight: var(--ui-subtitle-font-weight);
+  letter-spacing: 0.9px;
+  max-width: 770px;
+  text-align: left;
+  padding: 0;
+  margin: 0 0 0 400px;
+  color: var(--ui-text-color);
+}
+
+.title {
+  font-size: var(--ui-block-title-size);
+  letter-spacing: 2px;
+  font-family: var(--ui-block-title-font-family);
+  font-weight: var(--ui-subtitle-font-weight);
+  color: var(--ui-dark-shade-color);
+  line-height: 66px;
+  position: absolute;
+  width: 370px;
+  padding-right: 150px;
+  text-align: left;
+
+  &::after {
+    content: ".";
+    position: absolute;
+    bottom: 0;
+    right: 153px;
+    color: var(--ui-brand-color);
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -24px;
+    width: 170px;
+    height: 2px;
+    background-color: var(--ui-brand-color);
+  }
+}
+
+.article {
+  &__content {
+    padding-left: 100px;
+    padding-top: 18px;
+
+    &::before {
+      width: 70px;
+      height: 70px;
+      background-color: var(--ui-light-shade-color);
+      padding: 0;
+      color: var(--ui-brand-color);
+      font-size: var(--ui-heading-size);
+      font-weight: var(--ui-heading-font-weight);
+      font-family: var(--ui-heading-font-family);
+      content: "01.";
+    }
+  }
+
+  &:nth-child(2) {
+    .article__content::before {
+      content: "02.";
+    }
+  }
+
+  &:nth-child(3) {
+    .article__content::before {
+      content: "03.";
+    }
+  }
+
+  &__title {
+    font-size: var(--ui-heading-size);
+    font-family: var(--ui-heading-font-family);
+    font-weight: var(--ui-heading-font-weight);
+    line-height: var(--ui-heading-line-height);
+    color: var(--ui-dark-shade-color);
+    margin-bottom: 10px;
+  }
+
+  .text {
+    font-size: var(--ui-text-size);
+    line-height: var(--ui-text-line-height);
+    font-family: var(--ui-text-font-family);
+    font-weight: var(--ui-text-font-weight);
+    color: var(--ui-text-color);
+  }
+}
+
+.articles-wrapper {
+  margin-top: 50px;
+}
+
+@media screen and (max-width: 767px) {
+  .title {
+    position: relative;
+    padding: 0;
+    width: auto;
+    display: inline-block;
+
+    &::after {
+      right: -12px;
+    }
+  }
+
+  .subtitle {
+    margin: 0;
+    margin-top: 65px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .title::after {
+    display: none;
+  }
+}
