--- a/src/style.css
+++ b/src/style.css
@@ -5,37 +5,27 @@
 }
 
 .subtitle {
-  font-size: var(--ui-subtitle-size);
-  line-height: var(--ui-subtitle-line-height);
-  font-family: var(--ui-subtitle-font-family);
-  font-weight: var(--ui-subtitle-font-weight);
   letter-spacing: 0.9px;
   max-width: 770px;
   text-align: left;
   padding: 0;
   margin: 0 0 0 400px;
   color: var(--ui-text-color);
+
+  @media screen and (max-width: 767px) {
+    margin: 0;
+    margin-top: 65px;
+  }
 }
 
 .title {
-  font-size: var(--ui-block-title-size);
-  letter-spacing: 2px;
-  font-family: var(--ui-block-title-font-family);
-  font-weight: var(--ui-subtitle-font-weight);
+  font-weight: 400;
   color: var(--ui-dark-shade-color);
   line-height: 66px;
   position: absolute;
   width: 370px;
   padding-right: 150px;
   text-align: left;
-
-  &::after {
-    content: ".";
-    position: absolute;
-    bottom: 0;
-    right: 153px;
-    color: var(--ui-brand-color);
-  }
 
   &::before {
     content: "";
@@ -45,6 +35,29 @@
     width: 170px;
     height: 2px;
     background-color: var(--ui-brand-color);
+  }
+
+  &::after {
+    content: ".";
+    position: absolute;
+    bottom: 0;
+    right: 153px;
+    color: var(--ui-brand-color);
+
+    @media screen and (max-width: 767px) {
+      right: -12px;
+    }
+
+    @media screen and (max-width: 425px) {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    position: relative;
+    padding: 0;
+    width: auto;
+    display: inline-block;
   }
 }
 
@@ -79,20 +92,7 @@
   }
 
   &__title {
-    font-size: var(--ui-heading-size);
-    font-family: var(--ui-heading-font-family);
-    font-weight: var(--ui-heading-font-weight);
-    line-height: var(--ui-heading-line-height);
-    color: var(--ui-dark-shade-color);
     margin-bottom: 10px;
-  }
-
-  .text {
-    font-size: var(--ui-text-size);
-    line-height: var(--ui-text-line-height);
-    font-family: var(--ui-text-font-family);
-    font-weight: var(--ui-text-font-weight);
-    color: var(--ui-text-color);
   }
 }
 
@@ -100,26 +100,10 @@
   margin-top: 50px;
 }
 
-@media screen and (max-width: 767px) {
-  .title {
-    position: relative;
-    padding: 0;
-    width: auto;
-    display: inline-block;
-
-    &::after {
-      right: -12px;
-    }
-  }
-
-  .subtitle {
-    margin: 0;
-    margin-top: 65px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .title::after {
-    display: none;
-  }
+.button {
+  font-size: var(--ui-small-text-size);
+  font-family: var(--ui-small-text-font-family);
+  font-weight: 600;
+  letter-spacing: 1.8px;
+  color: var(--ui-quote-color);
 }
