done block about

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,115 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.section {
+  padding: 180px 0 120px;
+}
+
+.article__picture-wrapper {
+  top: -141px;
+}
+
+.section__inner {
+  position: relative;
+}
+
+.top-icon {
+  position: absolute;
+  top: 81px;
+  left: 96px;
+  width: 60px;
+  height: 60px;
+  opacity: 0.4;
+  background-color: #d9e8ff;
+  border-radius: 40px;
+  display: flex;
+}
+
+.article {
+  display: inline-flex;
+  flex-direction: row-reverse;
+  backgroung: var(--ui-light-shade-color);
+  box-shadow: 0 2px 12px 0 rgba(33, 67, 71, 0.08);
+  border-radius: 3px;
+  padding: 81px 101px 82px 0;
+}
+
+.article__content {
+  padding: 90px 0 0 81px;
+}
+
+.article__title {
+  color: var(--ui-hero-title-color);
+  font-size: var(--ui-block-title-size);
+  font-family: var(--ui-block-title-font-family);
+  letter-spacing: 1.8px;
+  margin-bottom: 24px;
+}
+
+.article__title::after {
+  content: " ";
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  border-radius: 4px;
+  background: var(--ui-brand-color);
+}
+
+.article__text {
+  color: var(--ui-text-color);
+  font-size: calc(var(--ui-small-text-size) * 1.17);
+  font-family: var(--ui-small-text-font-family);
+  letter-spacing: 1.5px;
+  line-height: var(--ui-text-line-height);
+  margin: 0;
+  padding-right: 28px;
+}
+
+.btns-group {
+  margin-top: 0;
+
+  a {
+    color: var(--ui-btn-primary-bg);
+    background: none;
+    font-size: calc(var(--ui-small-text-size) * 1.25);
+    font-family: var(--ui-sub-heading-font-family);
+    font-weight: bold;
+    margin: 0;
+  }
+}
+
+img {
+  border-radius: 3px;
+  box-shadow: 0 2px 12px 0 rgba(33, 67, 71, 0.35);
+  width: 470px;
+  height: 490px;
+}
+
+@media (max-width: 900px) {
+  .article {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .article__content {
+    max-width: 100%;
+    padding: 90px 0 0 15px;
+  }
+
+  img {
+    margin: auto;
+  }
+
+  .article__picture-wrapper {
+    margin: auto;
+    top: 0;
+  }
+
+  .top-icon {
+    display: none;
+  }
+
+  .article__text {
+    padding-right: 15px;
+  }
+}
