--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@
 
 .article__picture-wrapper {
   top: -141px;
+  width: 470px;
+  height: 490px;
+  box-shadow: 0 2px 12px 0 rgba(33, 67, 71, 0.35);
+  border-radius: 3px;
 }
 
 .section__inner {
@@ -28,7 +32,7 @@
 .article {
   display: inline-flex;
   flex-direction: row-reverse;
-  backgroung: var(--ui-light-shade-color);
+  background: var(--ui-light-shade-color);
   box-shadow: 0 2px 12px 0 rgba(33, 67, 71, 0.08);
   border-radius: 3px;
   padding: 81px 101px 82px 0;
@@ -111,5 +115,9 @@ img {
 
   .article__text {
     padding-right: 15px;
+  }
+
+  .section__inner {
+    padding: 0;
   }
 }
