--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+
+.title {
+  color: var(--ui-brand-color);
+  font-size: calc(var(--ui-block-title-size)*3.3);
+  margin-bottom: 23px;
+}
+
+.description {
+  color: var(--ui-subtitle-color);
+  margin-bottom: 40px;
+  font-size: calc(var(--ui-subtitle-size)*1.2);
+  letter-spacing: 0.2px;
+}
