--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,72 @@
 @import "wireframe-zapdos-why/src/style.css";
 
 /* start here */
+
+.title {
+  font-size: var(--ui-block-title-size);
+  text-transform: uppercase;
+}
+
+.items-wrapper {
+  justify-content: space-around;
+}
+
+.item {
+  flex-basis: 31%;
+  max-width: 31%;
+  position: relative;
+  z-index: 2;
+  margin-top: 30px;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 60px;
+
+  p {
+    font-size: var(--ui-text-size);
+    font-family: var(--ui-text-font-family);
+    color: var(--ui-light-shade-color);
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    background-color: var(--ui-light-shade-color);
+    opacity: 0.05;
+    z-index: -2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &::before {
+    position: absolute;
+    content: "";
+    border: var(--ui-light-shade-color) 1px solid;
+    opacity: 0.07;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__icon {
+    &-picture {
+      background-color: transparent;
+
+      img {
+        object-fit: contain;
+      }
+    }
+  }
+}
+
+@media (max-width: 930px) {
+  .item {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+}
