--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,61 @@
 @import "wireframe-zapdos-services/src/style.css";
 
 /* start here */
+.section {
+  padding: 85px 0;
+
+  &__header {
+    padding-top: 0;
+
+    @media (min-width: 768px) {
+      margin-bottom: 17px;
+    }
+  }
+}
+
+.title {
+  color: var(--ui-light-shade-color);
+  text-transform: uppercase;
+}
+
+.article {
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0 12px;
+
+  &__title {
+    color: var(--ui-light-shade-color);
+    font-size: var(--ui-subheading-size);
+    line-height: var(--ui-subheading-line-height);
+    margin-bottom: 20px;
+  }
+
+  &__text {
+    color: var(--ui-brand-color);
+    font-style: var(--ui-subheading-font-style);
+    margin-bottom: 22px;
+  }
+
+  &__link {
+    font-family: var(--ui-small-font-family);
+    color: var(--ui-light-shade-color);
+    line-height: var(--ui-small-line-height);
+    letter-spacing: 1px;
+  }
+
+  &__picture {
+    height: 370px;
+  }
+
+  &__picture-wrapper {
+    margin-bottom: 26px;
+  }
+}
+
+.btns-group {
+  padding-top: 15px;
+}
+
+.button {
+  text-transform: uppercase;
+}
