--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,48 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.article {
+  &__content {
+    justify-content: flex-start;
+    position: relative;
+    padding: 45px 50px;
+
+    &::before {
+      content: "";
+      display: inline-block;
+      background-color: var(--ui-light-shade-color);
+      opacity: 0.05;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__title {
+    text-transform: uppercase;
+    margin-bottom: 5px;
+  }
+
+  &__subtitle {
+    font-style: var(--ui-caption-font-style);
+    color: var(--ui-light-accent-color);
+    margin-top: 0;
+  }
+
+  &__socials {
+    order: 1;
+    margin: 12px 0 35px;
+  }
+
+  &__text {
+    order: 2;
+    margin-bottom: 0;
+  }
+}
+
+.social-title {
+  display: none;
+}
+
