--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,56 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
-/* start here */
+.section {
+  position: relative;
+  z-index: 0;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(150deg, #2789d4, var(--ui-brand-color));
+    opacity: 0.22;
+    z-index: -1;
+  }
+}
+
+.title {
+  text-transform: uppercase;
+  font-size: var(--ui-hero-title-size);
+  letter-spacing: -0.6px;
+  color: var(--ui-light-accent-color);
+}
+
+.description {
+  font-size: var(--ui-subtitle-size);
+  line-height: var(--ui-subtitle-line-height);
+  color: var(--ui-subtitle-color);
+}
+
+.button {
+  text-transform: uppercase;
+  letter-spacing: 1.4px;
+  font-family: var(--ui-small-font-family);
+}
+
+@media (min-width: 992px) {
+  .section {
+    padding: 82px 0;
+  }
+
+  .title {
+    margin-bottom: 17px;
+  }
+
+  .description {
+    margin-bottom: 40px;
+
+    &:nth-child(2) {
+      margin-top: 0;
+    }
+  }
+}
