--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,17 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
-/* start here */
+.title {
+  letter-spacing: -2px;
+  font-weight: calc(var(--ui-block-title-font-weight) + 200);
+}
+
+.description {
+  line-height: var(--ui-subtitle-line-height);
+  font-weight: var(--ui-subtitle-font-weight);
+}
+
+.button {
+  text-transform: uppercase;
+  font-size: var(--ui-small-size);
+  font-weight: calc(var(--ui-small-font-weight) + 200);
+}
