--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,27 @@
 @import "wireframe-zapdos-cover/src/style.css";
 
 /* start here */
+.section {
+  text-align: center;
+}
+
+.title {
+  text-transform: uppercase;
+
+  &:after {
+    content: "";
+    width: 70px;
+    height: 1px;
+    background-color: var(--ui-light-shade-color);
+    opacity: 0.3;
+    display: block;
+    margin: 20px auto 30px;
+  }
+}
+
+.subtitle {
+  color: var(--ui-light-shade-color);
+  font-family: var(--ui-subheading-font-family);
+  font-size: var(--ui-subheading-size);
+  font-weight: var(--ui-subheading-font-weight);
+}
