add picture wrapper margin bottom with media

--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,10 @@
   }
 
   &__picture-wrapper {
-    margin-bottom: 0;
+
+    @media (min-width: 768px) {
+      margin-bottom: 0;
+    }
     position: relative;
 
     &::after {
