design  kadabra blog_2_home

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 
 /* start here */
 .section {
+  font-family: var(--ui-block-title-font-family);
 
   @media (min-width: 992px) {
     padding: 90px 0;
@@ -27,6 +28,28 @@
     &-wrapper {
       order: 1;
       width: 100%;
+    }
+  }
+
+  &__title {
+    order: 2;
+    text-transform: uppercase;
+    font-size: calc(var(--ui-subheading-size) * 0.83);
+
+    @media(min-width: 480px) {
+      font-size: var(--ui-heading-size);
+    }
+
+    @media(min-width: 768px) {
+      font-size: var(--ui-text-size);
+    }
+
+    @media(min-width: 992px) {
+      font-size: calc(var(--ui-subheading-size) * 0.87);
+    }
+
+    @media(min-width: 1200px) {
+      font-size: var(--ui-heading-size);
     }
   }
 
@@ -57,28 +80,6 @@
     }
   }
 
-  &__title {
-    order: 2;
-    text-transform: uppercase;
-    font-size: calc(var(--ui-subheading-size) * 0.83);
-
-    @media(min-width: 480px) {
-      font-size: var(--ui-heading-size);
-    }
-
-    @media(min-width: 768px) {
-      font-size: var(--ui-text-size);
-    }
-
-    @media(min-width: 992px) {
-      font-size: calc(var(--ui-subheading-size) * 0.87);
-    }
-
-    @media(min-width: 1200px) {
-      font-size: var(--ui-heading-size);
-    }
-  }
-
   &__text {
     order: 4;
   }
@@ -90,4 +91,8 @@
     text-transform: uppercase;
     letter-spacing: 1.5px;
   }
+}
+
+.button {
+  text-transform: uppercase;
 }
