--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@
     height: 370px;
     border-radius: 0;
     background-color: var(--ui-light-shade-color);
+    max-width: 100%;
 
     &-link {
       margin: 0 auto 15px;
@@ -32,6 +33,8 @@
   &__position {
     font-family: var(--ui-subtitle-font-family);
     font-style: italic;
+    margin-bottom: 30px;
+    letter-spacing: -1px;
   }
 }
 
@@ -46,6 +49,11 @@
   .item {
     flex-basis: 33.333333%;
     max-width: 33.333333%;
+    margin-bottom: 20px;
+  }
+
+  .section {
+    padding: 42px 0 75px;
   }
 }
 
@@ -59,3 +67,9 @@
   font-size: calc(var(--ui-small-size) * 0.875);
   text-transform: uppercase;
 }
+
+/* Color for icons
+.whiteLogo {
+  color: linear-gradient(to right, rgba(150, 239, 238, 1) 0%, rgba(92, 127, 189, 1) 100%);
+}
+*/
