--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,6 @@
 
 /* Color for icons
 .whiteLogo {
-  color: linear-gradient(to right, rgba(150, 239, 238, 1) 0%, rgba(92, 127, 189, 1) 100%);
+  color: linear-gradient(to bottom, rgba(150, 239, 238, 1) 0%, rgba(92, 127, 189, 1) 100%);
 }
 */
