--- a/src/style.css
+++ b/src/style.css
@@ -12,36 +12,51 @@
   text-transform: uppercase;
   font-size: var(--ui-small-size);
   font-family: var(--ui-small-font-family);
+  order: 5;
+  margin-bottom: 5px;
+  margin-top: 30px;
+  letter-spacing: 1px;
+  font-weight: 200;
+}
+
+.socials {
+  order: 4;
 }
 
 .item {
   &__inner {
     padding: 0;
     border: 0;
+    display: flex;
+    flex-direction: column;
   }
 
   &__title {
     color: var(--ui-light-shade-color);
     text-transform: uppercase;
+    order: 2;
   }
 
   &__pic {
     width: 370px;
     height: 370px;
     border-radius: 0;
-    background-color: var(--ui-light-shade-color);
+    background-color: transparent;
     max-width: 100%;
 
     &-link {
-      margin: 0 auto 15px;
+      margin: 0 auto 21px;
+      order: 1;
+      max-width: 100%;
     }
   }
 
   &__position {
     font-family: var(--ui-subtitle-font-family);
     font-style: italic;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     letter-spacing: -1px;
+    order: 2;
   }
 }
 
@@ -61,6 +76,10 @@
 
   .section {
     padding: 42px 0 75px;
+  }
+
+  .title_3Y9 + .items-wrapper_3rX {
+    margin-top: 43px;
   }
 }
 
