--- a/src/style.css
+++ b/src/style.css
@@ -1,122 +1,3 @@
-.button {
-  display: inline-block;
-  max-width: 100%;
-  text-decoration: none;
-  text-align: center;
-  font-family: var(--ui-text-font-family);
-  cursor: pointer;
-  transition: color 0.2s ease-in, background-color 0.2s ease-in, border-color 0.2s ease-in;
-  word-wrap: break-word;
-  width: 100%;
-  margin-top: 60px;
-}
-
-.button--primary {
-  background-color: var(--ui-btn-primary-bg);
-  color: var(--ui-btn-primary-color);
-  border: var(--ui-btn-primary-border-width) var(--ui-btn-primary-border-style) var(--ui-btn-primary-border-color);
-  box-shadow: var(--ui-btn-primary-shadow-x) var(--ui-btn-primary-shadow-y) var(--ui-btn-primary-shadow-blur) var(--ui-btn-primary-shadow-spread) var(--ui-btn-primary-shadow-color);
-}
-
-.button--primary:hover,
-.button--primary:focus {
-  background-color: var(--ui-btn-primary-hover-bg);
-  color: var(--ui-btn-primary-hover-color);
-  border: var(--ui-btn-primary-hover-border-width) var(--ui-btn-primary-hover-border-style) var(--ui-btn-primary-hover-border-color);
-  box-shadow: var(--ui-btn-primary-hover-shadow-x) var(--ui-btn-primary-hover-shadow-y) var(--ui-btn-primary-hover-shadow-blur) var(--ui-btn-primary-hover-shadow-spread) var(--ui-btn-primary-hover-shadow-color);
-}
-
-.button--primary:active {
-  background-color: var(--ui-btn-primary-active-bg);
-  color: var(--ui-btn-primary-active-color);
-  border: var(--ui-btn-primary-active-border-width) var(--ui-btn-primary-active-border-style) var(--ui-btn-primary-active-border-color);
-  box-shadow: var(--ui-btn-primary-active-shadow-x) var(--ui-btn-primary-active-shadow-y) var(--ui-btn-primary-active-shadow-blur) var(--ui-btn-primary-active-shadow-spread) var(--ui-btn-primary-active-shadow-color);
-}
-
-.button--primary-alt {
-  background-color: var(--ui-alt-btn-primary-bg);
-  color: var(--ui-alt-btn-primary-color);
-  border: var(--ui-alt-btn-primary-border-width) var(--ui-alt-btn-primary-border-style) var(--ui-alt-btn-primary-border-color);
-  box-shadow: var(--ui-alt-btn-primary-shadow-x) var(--ui-alt-btn-primary-shadow-y) var(--ui-alt-btn-primary-shadow-blur) var(--ui-alt-btn-primary-shadow-spread) var(--ui-alt-btn-primary-shadow-color);
-}
-
-.button--primary-alt:hover,
-.button--primary-alt:focus {
-  background-color: var(--ui-alt-btn-primary-hover-bg);
-  color: var(--ui-alt-btn-primary-hover-color);
-  border: var(--ui-alt-btn-primary-hover-border-width) var(--ui-alt-btn-primary-hover-border-style) var(--ui-alt-btn-primary-hover-border-color);
-  box-shadow: var(--ui-alt-btn-primary-hover-shadow-x) var(--ui-alt-btn-primary-hover-shadow-y) var(--ui-alt-btn-primary-hover-shadow-blur) var(--ui-alt-btn-primary-hover-shadow-spread) var(--ui-alt-btn-primary-hover-shadow-color);
-}
-
-.button--primary-alt:active {
-  background-color: var(--ui-alt-btn-primary-active-bg);
-  color: var(--ui-alt-btn-primary-active-color);
-  border: var(--ui-alt-btn-primary-active-border-width) var(--ui-alt-btn-primary-active-border-style) var(--ui-alt-btn-primary-active-border-color);
-  box-shadow: var(--ui-alt-btn-primary-active-shadow-x) var(--ui-alt-btn-primary-active-shadow-y) var(--ui-alt-btn-primary-active-shadow-blur) var(--ui-alt-btn-primary-active-shadow-spread) var(--ui-alt-btn-primary-active-shadow-color);
-}
-
-.button--secondary {
-  background-color: var(--ui-btn-secondary-bg);
-  color: var(--ui-btn-secondary-color);
-  border: var(--ui-btn-secondary-border-width) var(--ui-btn-secondary-border-style) var(--ui-btn-secondary-border-color);
-  box-shadow: var(--ui-btn-secondary-shadow-x) var(--ui-btn-secondary-shadow-y) var(--ui-btn-secondary-shadow-blur) var(--ui-btn-secondary-shadow-spread) var(--ui-btn-secondary-shadow-color);
-}
-
-.button--secondary:hover,
-.button--secondary:focus {
-  background-color: var(--ui-btn-secondary-hover-bg);
-  color: var(--ui-btn-secondary-hover-color);
-  border: var(--ui-btn-secondary-hover-border-width) var(--ui-btn-secondary-hover-border-style) var(--ui-btn-secondary-hover-border-color);
-  box-shadow: var(--ui-btn-secondary-hover-shadow-x) var(--ui-btn-secondary-hover-shadow-y) var(--ui-btn-secondary-hover-shadow-blur) var(--ui-btn-secondary-hover-shadow-spread) var(--ui-btn-secondary-hover-shadow-color);
-}
-
-.button--secondary:active {
-  background-color: var(--ui-btn-secondary-active-bg);
-  color: var(--ui-btn-secondary-active-color);
-  border: var(--ui-btn-secondary-active-border-width) var(--ui-btn-secondary-active-border-style) var(--ui-btn-secondary-active-border-color);
-  box-shadow: var(--ui-btn-secondary-active-shadow-x) var(--ui-btn-secondary-active-shadow-y) var(--ui-btn-secondary-active-shadow-blur) var(--ui-btn-secondary-active-shadow-spread) var(--ui-btn-secondary-active-shadow-color);
-}
-
-.button--secondary-alt {
-  background-color: var(--ui-alt-btn-secondary-bg);
-  color: var(--ui-alt-btn-secondary-color);
-  border: var(--ui-alt-btn-secondary-border-width) var(--ui-alt-btn-secondary-border-style) var(--ui-alt-btn-secondary-border-color);
-  box-shadow: var(--ui-alt-btn-secondary-shadow-x) var(--ui-alt-btn-secondary-shadow-y) var(--ui-alt-btn-secondary-shadow-blur) var(--ui-alt-btn-secondary-shadow-spread) var(--ui-alt-btn-secondary-shadow-color);
-}
-
-.button--secondary-alt:hover,
-.button--secondary-alt:focus {
-  background-color: var(--ui-alt-btn-secondary-hover-bg);
-  color: var(--ui-alt-btn-secondary-hover-color);
-  border: var(--ui-alt-btn-secondary-hover-border-width) var(--ui-alt-btn-secondary-hover-border-style) var(--ui-alt-btn-secondary-hover-border-color);
-  box-shadow: var(--ui-alt-btn-secondary-hover-shadow-x) var(--ui-alt-btn-secondary-hover-shadow-y) var(--ui-alt-btn-secondary-hover-shadow-blur) var(--ui-alt-btn-secondary-hover-shadow-spread) var(--ui-alt-btn-secondary-hover-shadow-color);
-}
-
-.button--secondary-alt:active {
-  background-color: var(--ui-alt-btn-secondary-active-bg);
-  color: var(--ui-alt-btn-secondary-active-color);
-  border: var(--ui-alt-btn-secondary-active-border-width) var(--ui-alt-btn-secondary-active-border-style) var(--ui-alt-btn-secondary-active-border-color);
-  box-shadow: var(--ui-alt-btn-secondary-active-shadow-x) var(--ui-alt-btn-secondary-active-shadow-y) var(--ui-alt-btn-secondary-active-shadow-blur) var(--ui-alt-btn-secondary-active-shadow-spread) var(--ui-alt-btn-secondary-active-shadow-color);
-}
-
-.button--size-sm {
-  padding: var(--ui-btn-sm-padding);
-  border-radius: var(--ui-btn-sm-border-radius);
-  font-size: var(--ui-btn-sm-size);
-}
-
-.button--size-md {
-  padding: var(--ui-btn-md-padding);
-  border-radius: var(--ui-btn-md-border-radius);
-  font-size: var(--ui-btn-md-size);
-}
-
-.button--size-lg {
-  padding: var(--ui-btn-lg-padding);
-  font-size: var(--ui-btn-lg-size);
-  border-radius: var(--ui-btn-lg-border-radius);
-}
-
 .section {
   min-width: 320px;
   padding: 30px 0 50px;
@@ -293,65 +174,63 @@
   }
 }
 
-:global {
+.slider-dots {
+  position: static;
+  margin-top: auto;
+  font-size: 0;
+
   /* stylelint-disable */
-  .slick-dots {
-    position: static;
-    margin-top: auto;
-    font-size: 0;
-  }
-
-  .slick-dots li {
-    position: static;
-    width: auto;
-    height: auto;
-    margin: 0;
-    cursor: default;
-    display: inline-block;
-    margin-right: 9px;
-  }
-
-  .slick-dots li:last-child {
-    margin-right: 0;
-  }
-
-  @media (min-width: 768px) {
-    .slick-dots li {
-      margin-right: 16px;
+  :global {
+    li.slick-active button {
+      background-color: var(--ui-brand-color);
     }
-  }
-
-  .slick-dots li button {
-    width: 14px;
-    height: 14px;
-    padding: 0;
-    font-size: 0;
-    border: 0;
-    border-radius: 50%;
-    background-color: var(--ui-light-shade-color);
-    transition: background-color .2s ease-in;
-    cursor: pointer;
-    
-    &::before {
-      display: none;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .slick-dots li button {
-      width: 20px;
-      height: 20px;
-    }
-  }
-
-  .slick-dots li.slick-active button {
-    background-color: var(--ui-brand-color);
   }
   /* stylelint-enable */
 }
 
-@media (min-width: 480px) {
-  .button {
+.slider-dots li {
+  position: static;
+  width: auto;
+  height: auto;
+  margin: 0;
+  cursor: default;
+  display: inline-block;
+  margin-right: 9px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  @media (min-width: 768px) {
+    margin-right: 16px;
+  }
+}
+
+.slider-dots li button {
+  width: 14px;
+  height: 14px;
+  padding: 0;
+  font-size: 0;
+  border: 0;
+  border-radius: 50%;
+  background-color: var(--ui-light-shade-color);
+  transition: background-color .2s ease-in;
+  cursor: pointer;
+
+  &::before {
+    display: none;
+  }
+
+  @media (min-width: 768px) {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.button {
+  margin-top: 60px;
+
+  @media (min-width: 480px) {
     width: auto;
   }
 }
