--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 @import "wireframe-zapdos-careers/src/style.css";
 
 /* start here */
+
+.title {
+  color: var(--ui-light-shade-color);
+}
+
+.list__item-text {
+  color: var(--ui-light-shade-color);
+  font-size: calc(var(--ui-heading-size) * 0.615);
+}
