--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,40 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-zapdos-gallery/src/style.css";
 
 /* start here */
+
+.section {
+  padding: 45px 0;
+
+  @media (min-width: 768px) {
+    padding: 45px 0 90px;
+  }
+
+  &__header {
+
+    @media (min-width: 768px) {
+      margin-bottom: 45px;
+    }
+  }
+}
+
+.title {
+  text-transform: uppercase;
+}
+
+.items-wrapper {
+  margin: 0;
+}
+
+.item {
+  margin-bottom: 0;
+  padding: 0;
+
+  @media (min-width: 768px) {
+    max-width: 25%;
+    flex-basis: 25%;
+  }
+
+  &__picture {
+    padding-top: 100%;
+  }
+}
