--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,57 @@
 @import "wireframe-zapdos-about/src/style.css";
 
-/* start here */
+.section {
+  padding-top: 50px;
+  background-color: var(--ui-dark-shade-color);
+}
+
+.article {
+  &__title {
+    margin-bottom: 30px;
+    line-height: calc(var(--ui-block-title-line-height) * 0.878);
+    letter-spacing: -1.3px;
+  }
+
+  &__text {
+    line-height: calc(var(--ui-text-line-height) * 0.962);
+    letter-spacing: -0.3px;
+  }
+}
+
+.button {
+  text-transform: uppercase;
+}
+
+@media (min-width: 480px) {
+  .button {
+    margin: 10px auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .article {
+    &__picture {
+      min-height: 555px;
+
+      &-wrapper {
+        max-width: 48.7%;
+      }
+    }
+
+    &__content {
+      padding-left: 15px;
+    }
+
+    &__title {
+      margin-top: 20px;
+    }
+
+    &__text {
+      max-width: 450px;
+    }
+  }
+
+  .button {
+    margin: 10px;
+  }
+}
