--- a/src/style.css
+++ b/src/style.css
@@ -11,25 +11,20 @@
   }
 }
 
-.nav {
-  &-list {
-    &__item {
+.nav-list__item {
 
-      @media (min-width: 992px) {
-        margin-left: 14px;
-        margin-right: 14px;
-      }
+  @media (min-width: 992px) {
+    margin-left: 14px;
+    margin-right: 14px;
+  }
 
-      @media (min-width: 1200px) {
-        margin-left: 17px;
-        margin-right: 17px;
-      }
-    }
+  @media (min-width: 1200px) {
+    margin-left: 17px;
+    margin-right: 17px;
   }
 }
 
 .footer {
-  background-color: var(--ui-dark-shade-color);
 
   @media (min-width: 992px) {
     padding: 30px 0;
