--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,22 @@
 @import "wireframe-zapdos-services/src/style.css";
 
-/* start here */
+.article {
+  flex-basis: 33.33%;
+  max-width: 33.33%;
+
+  &:nth-child(4) {
+    display: none;
+  }
+
+  &__picture {
+    padding-top: 100%;
+  }
+
+  &__title {
+    text-align: center;
+  }
+
+  &__text {
+    display: none;
+  }
+}
