--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,64 @@
 @import "wireframe-zapdos-services/src/style.css";
 
 /* start here */
+
+.section {
+  padding: 50px 0;
+
+  @media (min-width: 768px) {
+    padding: 60px 0;
+  }
+
+  @media (min-width: 992px) {
+    padding: 75px 0;
+  }
+  
+  &__inner {
+    max-width: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__header {
+    padding: 0;
+    margin-bottom: 32px;
+  }
+}
+
+.articles-wrapper {
+  margin: 0;
+}
+
+.article {
+  position: relative;
+  padding: 0;
+  margin: 0;
+
+  @media (min-width: 1200px) {
+    flex-basis: 33.33%;
+    max-width: 33.33%;
+  }
+
+  &__picture-wrapper {
+    margin-bottom: 0;
+  }
+
+  &__picture {
+    padding-top: 46.2%;
+  }
+
+  &__title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: 0;
+    font-size: calc(var(--ui-heading-size)) * 0.615;
+    transform: translate(-50%, -50%);
+    padding: 15px 42px;
+    background: var(--ui-light-shade-color);
+  }
+}
+
+.btns-group {
+  padding-bottom: 0;
+}
