add child to image

--- a/src/style.css
+++ b/src/style.css
@@ -134,6 +134,25 @@
   margin-bottom: 20px;
 }
 
+.article__picture-decorator {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  border: 1px solid var(--ui-brand-color);
+  transform: translate(-50%, -50%);
+  color: var(--ui-brand-color);
+  opacity: 0;
+  transition: opacity .2s ease-in;
+  z-index: 1;
+}
+
+.article__picture:hover .article__picture-decorator {
+  opacity: 1;
+}
+
 .article__image {
   position: absolute;
   width: 100%;
