--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
   @media (min-width: 992px) {
     padding: 75px 0;
   }
-  
+
   &__inner {
     max-width: none;
     margin: 0;
@@ -57,6 +57,10 @@
     padding: 15px 42px;
     background: var(--ui-light-shade-color);
   }
+
+  &__text {
+    display: none;
+  }  
 }
 
 .btns-group {
