--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,51 @@
 .link:active {
   color: var(--ui-link-hover-color);
 }
+
+.form {
+  padding: 0 20px 50px;
+}
+
+@media (min-width: 480px) {
+  .form {
+    padding: 0 16.3636% 9.0909%;
+  }
+}
+
+.form__item {
+  display: block;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.form__field {
+  display: block;
+  width: 100%;
+  height: 46px;
+  margin-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 0;
+  border-radius: 3px;
+  font-family: inherit;
+  font-size: inherit;
+  text-overflow: ellipsis;
+  background-color: rgba(103, 103, 103, .2);
+}
+
+@media (min-width: 992px) {
+  .form__field {
+    margin-top: 10px;
+  }
+}
+
+.form__button {
+  width: 100%;
+  margin-top: 20px;
+}
+
+@media (min-width: 992px) {
+  .form__button {
+    margin-top: 15px;
+  }
+}
